# objrs

./: Cargo.toml  README.md  index.html
models/: tree2.mtl
src/: camera.rs  lib.rs  main.rs  model.rs  shader.wgsl  texture.rs
