[package]
name = "objrs"
version = "0.1.0"
edition = "2021"
description = "render obj files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
cgmath = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
tobj = "4.0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.bundle]
identifier = "com.afienko.exampleapplication"